Remove obsolete UseConcMarkSweepGC from :jvm-opts